# halo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  halo.capnp
.github/workflows/: main.yml
docs/: test_environment.md
src/: cluster.rs  config.rs  halo_capnp.rs  host.rs  lib.rs  manager.rs  resource.rs  test_env.rs  tls.rs
src/commands/: discover.rs  mod.rs  power.rs  start.rs  status.rs  stop.rs  unmanage.rs  unmange.rs  validate.rs
src/remote/: mod.rs  ocf.rs
systemd/: halo-remote.service  halo.service
tests/: failover.toml  fence_test  fencing.toml  multiagent.toml  recover.toml  simple.rs  simple.toml  usability.rs
tests/ocf_resources/resource.d/heartbeat/: ZFS
tests/ocf_resources/resource.d/lustre/: Lustre
